404 page, now with more Bill Murray

--- a/404.md
+++ b/404.md
@@ -2,7 +2,13 @@
 layout: page
 title: 404
 permalink: /404.html
+custom_css_class: four-oh-four
 ---
-#### 404 - Sorry, this page doesn't exist.
+# <span>404</span> Page Not Found
 
-Should something be here? If so, please [email me](mailto:hello@stephenhowells.net) and let me know of the problem. You may also visit the [search page](/search/) and find what you're seeking.
+<video width="320" autoplay loop>
+  <source src="/dist/img/404.mp4" type="video/mp4">
+</video>
+
+Should something be here? If so, please [file an issue](https://github.com/stephenhowells/stephenhowells.net/issues) on GitHub. You can also [search](/search/) for something that may have been moved.
+{:.explanation}
