--- a/404.md
+++ b/404.md
@@ -4,11 +4,12 @@ title: 404
 permalink: /404.html
 custom_css_class: four-oh-four
 ---
-# <span>404</span> Page Not Found
+## <span>404</span> Page Not Found
 
 <video width="320" autoplay loop>
   <source src="/dist/img/404.mp4" type="video/mp4">
 </video>
 
-Should something be here? If so, please [file an issue](https://github.com/stephenhowells/stephenhowells.net/issues) on GitHub. You can also [search](/search/) for something that may have been moved.
-{:.explanation}
+<div class="explanation" markdown="1">
+  Should something be here? If so, please [file an issue](https://github.com/stephenhowells/stephenhowells.net/issues) on GitHub. You can also [search](/search/) for something that may have been moved.
+</div>
