--- a/404.md
+++ b/404.md
@@ -4,9 +4,9 @@ title: 404
 permalink: /404.html
 custom_css_class: four-oh-four
 ---
-## <span>404</span> Page Not Found
+# <span>404</span> Page Not Found
 
-<video width="320" autoplay loop>
+<video autoplay loop>
   <source src="/dist/img/404.mp4" type="video/mp4">
 </video>
 
