--- a/_posts/2017-05-29-things-3.markdown
+++ b/_posts/2017-05-29-things-3.markdown
@@ -8,4 +8,4 @@ categories: links
 ---
 German indie app maker Cultured Code recently released the third major version of Things, their classy todo app. This app, five years in the making, is noteworthy as it’s an incredible example of beautiful typography and iconography that carries a delightful user interface. I’ve bought and used previous versions of Things and have always admired Cultured Code’s attention to design. With Things 3 they’ve made one of the strongest statements yet for native platform software to be as beautiful as it is useful.
 
-I’m currently spending time with the new Things and so far it’s going well. Design matters wether you are building for mobile, desktop, or the browser. My wish is that other software makers will use Things as inspiration to exhibit better restraint in their work. I’m naturally drawn to design that shows restraint and Things is a masterpiece in this regard.
+I’m currently spending time with the new Things and so far it’s going well. Design matters whether you are building for mobile, desktop, or the browser. My wish is that other software makers will use Things as inspiration to exhibit better restraint in their work. I’m naturally drawn to design that shows restraint and Things is a masterpiece in this regard.
